products page finished and navbar on small screens fixed

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,12 @@
 body{
     margin: 0;
 }
+
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
+* {
+    overflow: hidden;
+}
