--- a/src/components/CardSlider.module.css
+++ b/src/components/CardSlider.module.css
@@ -85,6 +85,11 @@
     border-radius: 0.2em;
     margin-left: 4rem;
     margin-top: 0.5em;
+    transition: background-color 0.3s ease; 
+}
+
+.button:hover {
+    background-color: #283242;
 }
 
 @media (max-width: 580px) {
